json-gvariant: Parse json doubles that are whole numbers

The json gvariant serializer encodes whole number doubles without
a dot. The deserializer needs to be able to parse these as well.

Fix problem, and add test cases.

https://bugzilla.gnome.org/show_bug.cgi?id=724319